--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DoneRailsApp</title>
+    <title>Done-Rails-App</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application' %>
+
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
   <body>
-    <%= yield %>
+    <div id="app-div">
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flashes' %>
+      <% if devise_controller? %>
+        <div class="container devise-controllers col-sm-12 col-md-8 col-lg-6">
+          <%= yield %>
+        </div>
+      <% else %>
+        <%= yield %>
+      <% end %>
+    </div>
   </body>
 </html>
