--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,23 +1,26 @@
 <div class="container">
   <div class="actual-status mt-5">
     <h3>Actual System Status</h3>
-    <span class="mt-3">Done-Rails-App is </span><span class="badge badge-sucess"><%= StatusHistory.last.status %></span><br>
-    <span>System Message is </span><span class="badge badge-sucess"><%= StatusHistory.last.message %></span>
+    <span class="mt-3">Done-Rails-App is </span><span class="badge badge-sucess"><%= @status %></span><br>
+    <span>System Message is </span><span class="badge badge-sucess"><%= @message %></span>
   </div>
   <div class="system-history mt-5">
     <h3>System History</h3>
     <table class="table">
       <thead>
         <tr>
+          <th scope="col">#</th>
           <th scope="col">Date</th>
           <th scope="col">Status</th>
           <th scope="col">Message</th>
         </tr>
       </thead>
       <tbody>
-        <% @status_histories.each do |status_history| %>
+        <% @status_histories.each_with_index do |status_history, index| %>
           <tr>
-            <th scope="row"><%= status_history.created_at %></th>
+
+            <th scope="row"><%= index + 1 %></th>
+            <td><%= status_history.created_at %></td>
             <td><%= status_history.status %></td>
             <td><%= status_history.message %></td>
           </tr>
